--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0, minimum-scale=1.0, user-scalable=yes" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
     <title>Erim Uludağ | Portfolio</title>
     <style>
       /* Debug styles */
@@ -12,6 +15,7 @@
         margin: 0;
         padding: 0;
         background-color: #f5f7ff;
+        font-family: 'Inter', 'Roboto', system-ui, sans-serif;
       }
       #root {
         min-height: 100vh;
