--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
     <title>Erim Uludağ | Portfolio</title>
     <style>
-      /* Debug styles */
       body {
         min-height: 100vh;
         margin: 0;
@@ -24,7 +23,7 @@
     </style>
   </head>
   <body>
-    <div id="root"><!-- React will mount here --></div>
+    <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
